01.wordpress_all.yml
#wordpress namespace
apiVersion: v1
kind: Namespace
metadata:
  name: wordpress
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app-name: wordpress
  name: wordpress-service
  namespace: wordpress
spec:
  clusterIP: None
  ports:
  - port: 33333
    name: port-33333
    protocol: TCP
    targetPort: 33333
  selector:
    app-name: wordpress
  sessionAffinity: None
  type: ClusterIP
